pur_beurre/css/my_styles.css
.mybox {
  background-color: #dbdddf;
  
}

/* Merriweather Sans => Open Sans */
/* Merriweather => Scope One */

:root {
  --blue: #007bff;
  --indigo: #6610f2;
  --purple: #6f42c1;
  --pink: #e83e8c;
  --red: #dc3545;
  --orange: #f4623a;
  --yellow: #ffc107;
  --green: #28a745;
  --teal: #20c997;
  --cyan: #17a2b8;
  --white: #fff;
  --gray: #6c757d;
  --gray-dark: #343a40;
  --primary: #f4623a;
  --secondary: #6c757d;
  --success: #28a745;
  --info: #17a2b8;
  --warning: #ffc107;
  --danger: #dc3545;
  --light: #f8f9fa;
  --dark: #343a40;
  --breakpoint-xs: 0;
  --breakpoint-sm: 576px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 992px;
  --breakpoint-xl: 1200px;
  --font-family-sans-serif: "Open Sans", sans-serif, Arial ;
  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

body {
  margin: 0;
  font-family: "Scope One", sans-serif, Arial;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #212529;
  text-align: left;
  background-color: #fff;
}

h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6 {
  margin-bottom: 0.5rem;
  font-family: "Open Sans", sans-serif, Arial ;
  font-weight: 500;
  line-height: 1.2;
}

.tooltip {
  position: absolute;
  z-index: 1070;
  display: block;
  margin: 0;
  font-family: "Scope One", sans-serif, Arial;
  font-style: normal;
  font-weight: 400;
  line-height: 1.5;
  text-align: left;
  text-align: start;
  text-decoration: none;
  text-shadow: none;
  text-transform: none;
  letter-spacing: normal;
  word-break: normal;
  word-spacing: normal;
  white-space: normal;
  line-break: auto;
  font-size: 0.875rem;
  word-wrap: break-word;
  opacity: 0;
}

.popover {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1060;
  display: block;
  max-width: 276px;
  font-family: "Scope One", sans-serif, Arial;
  font-style: normal;
  font-weight: 400;
  line-height: 1.5;
  text-align: left;
  text-align: start;
  text-decoration: none;
  text-shadow: none;
  text-transform: none;
  letter-spacing: normal;
  word-break: normal;
  word-spacing: normal;
  white-space: normal;
  line-break: auto;
  font-size: 0.875rem;
  word-wrap: break-word;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 0.3rem;
}

.btn {
  font-family: "Open Sans", sans-serif, Arial;
}

#mainNav {
  box-shadow: 0 0.5rem 1rem rgba( 52, 90, 97, 0.15);
  background-color: #e8a75d;
  transition: background-color 0.2s ease;
}

#mainNav .navbar-brand {
  font-family: "Open Sans", sans-serif, Arial;
  font-weight: 700;
  color: #345a61;
}

#mainNav .navbar-nav .nav-item .nav-link {
  color: #6c757d;
  font-family: "Open Sans", sans-serif, Arial, ;
  font-weight: 700;
  font-size: 0.9rem;
  padding: 0.75rem 0;
}

#portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-sm .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-md .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-lg .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-xl .portfolio-box .portfolio-box-caption .project-category {
  font-family: "Open Sans", Arial;
  font-size: 0.85rem;
  font-weight: 600;
  text-transform: uppercase;
}

.fa-user{
  font-size: 1.5rem;
}

.fa-sign-out-alt{
  font-size: 1.5rem;
}

.fa-carrot{
  font-size: 1.5rem;
}

.fa-phone{
  color:#345a61;
  font-size: 2.5rem;
}

.fa-envelope{
  color:#345a61;
  font-size: 2.5rem;
}

header.searchhead {
  padding-top: 10rem;
  padding-bottom: calc(10rem - 4.5rem);
  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}
header.searchhead h1 {
  font-size: 2.25rem;
}
@media (min-width: 992px) {
  header.searchhead {
    height: 25vh;
    min-height: 20rem;
    padding-top: 4.5rem;
    padding-bottom: 0;
  }
  header.searchhead p {
    font-size: 1.15rem;
  }
  header.searchhead h1 {
    font-size: 3rem;
  }
}
@media (min-width: 1200px) {
  header.searchhead h1 {
    font-size: 3.5rem;
  }
}

.fa-save{
  color:#345a61;
  font-size: 1rem;
}

.results-image{
  position: relative;
}

.nutriscore-circle {
  position: absolute;
  top: 0.1rem;
  right: -4.0rem;
  font-weight: bold;
  font-size: 4rem;
  color: rgb(16, 104, 23);
  opacity :0.77;
  transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
}

.nutriscore-letter {
  position: absolute;
  top: 0.5rem;
  right: -2.85rem;
  font-weight: bold;
  font-size: 4.0rem;
  color: white;
  opacity :0.77;
  transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
}

.list-group-item {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  background-color: #fff;
  border: 0px solid rgba(0, 0, 0, 0.125);
}

.bg-primary {
  background-color: #c45525 !important;
}

a.bg-primary:hover, a.bg-primary:focus,
button.bg-primary:hover,
button.bg-primary:focus {
  background-color: #c45525 !important;
}

.bg-dark {
  background-color: #345a61 !important;
}

a.bg-dark:hover, a.bg-dark:focus,
button.bg-dark:hover,
button.bg-dark:focus {
  background-color: #1d2124 !important;
}

.btn-primary {
  color: #fff;
  background-color: #de9440;
  border-color: #de9440;
}
.btn-primary:hover {
  color: #fff;
  background-color: #c45525;
  border-color: #c45525
}
.btn-primary:focus, .btn-primary.focus {
  color: #fff;
  background-color: #c45525;
  border-color: #c45525;
  box-shadow: 0 0 0 0.2rem rgba(246, 122, 88, 0.5);
}
.btn-primary.disabled, .btn-primary:disabled {
  color: #fff;
  background-color: #de9440;
  border-color: #de9440;
}
.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
  color: #fff;
  background-color: #c45525;
  border-color: #c45525;
}
.btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
  box-shadow: 0 0 0 0.2rem rgba(246, 122, 88, 0.5);
}

hr.divider {
  max-width: 3.25rem;
  border-width: 0.2rem;
  border-color: #de9440;
}

.navbar-light .navbar-brand {
  color: rgba(52, 90, 97 , 1);
}
.navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
  color: rgba(52, 90, 97 , 0.9); 
}
.navbar-light .navbar-nav .nav-link {
  color: rgba(52, 90, 97 , 0.5);
}
.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
  color: rgba(52, 90, 97 , 0.7);
}
.navbar-light .navbar-nav .nav-link.disabled {
  color: rgba(52, 90, 97 , 0.3);
}


}
#mainNav .navbar-nav .nav-item .nav-link {
  color: #6c757d;
  font-family: "Open Sans", sans-serif, Arial;
  font-weight: 700;
  font-size: 0.9rem;
  padding: 0.75rem 0;
}
#mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
  color: #c45525;

}
#mainNav .navbar-nav .nav-item .nav-link.active {
  color: #c45525 !important;
}
@media (min-width: 992px) {
  #mainNav {
    box-shadow: none;
    background-color: transparent;
  }
  #mainNav .navbar-brand {
    color: rgba(232, 167, 93, 0.7);
  }
  /* New element-- */
  #mainNav .fa-user{
    color: rgba( 232, 167, 93 , 0.7);
  }
  /* New element-- */
  #mainNav .fa-sign-out-alt{
    color: rgba( 232, 167, 93 , 0.7);
  }
  /* New element-- */
  #mainNav .fa-carrot {
    color: rgba( 232, 167, 93 , 0.7);
  }
  /* --New element  */

  #mainNav .navbar-brand:hover {
    color: #e8a75d;
  }
  #mainNav .navbar-nav .nav-item .nav-link {
    color: rgba(255, 255, 255, 0.7);
    padding: 0 1rem;
  }
  #mainNav .navbar-nav .nav-item .nav-link:hover {
    color: #e8a75d;
  }
  #mainNav .navbar-nav .nav-item:last-child .nav-link {
    padding-right: 0;
  }
  #mainNav.navbar-scrolled {
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
    background-color: #e8a75d;
  }
  #mainNav.navbar-scrolled .navbar-brand {
    color: #345a61;
  }

  /* New element-- */
  #mainNav.navbar-scrolled .fa-user {
    color: #345a61;
  }
  #mainNav.navbar-scrolled .fa-sign-out-alt{
    color: #345a61;
  }
  #mainNav.navbar-scrolled .fa-carrot {
    color: #345a61;
  }
    /* --New element  */

  #mainNav.navbar-scrolled .navbar-brand:hover {
    color: #c45525;
  }
  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link {
    color: #345a61;
  }
  #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
    color: #c45525;
  }
}

.text-white {
  color: #e8a75d !important;
}

.text-white-50 {
  color: rgba(232, 167, 93 , 0.5) !important;
}

.text-white-75 {
  color: rgba(232, 167, 93 , 0.75);
}

.text-dark {
  color: #345a61 !important;
}

a.text-dark:hover, a.text-dark:focus {
  color: #121416 !important;
}

/* new element */
.text-dark-50 {
  color: rgba(52, 90, 97  , 0.5) !important;
}

/* new element */
.text-dark-75 {
  color: rgba(52, 90, 97  , 0.75);
}

.bg-white {
  background-color: #e8a75d !important;
}

.footer-text {
  color: #e8a75d;
}

a {
  color: none;
  text-decoration: none;
  background-color: transparent;
}

a.footer-text:hover {
  color: #86ebe6;
  text-decoration: none;
}

a:not([href]):not([class]) {
  color: inherit;
  text-decoration: none;
}
a:not([href]):not([class]):hover {
  color: inherit;
  text-decoration: none;
}

a #user_icon:hover{
  color:#86ebe6
}

